feat: add category API
